[gd_scene load_steps=58 format=3 uid="uid://cn2a5vpin5fkr"]

[ext_resource type="Texture2D" uid="uid://btden3h58t5at" path="res://Assets/Enemy_Animations_Set/enemies-skeleton1_attack.png" id="1_1f0kj"]
[ext_resource type="Script" uid="uid://dusmpmtrxmoqs" path="res://Scripts/enemy.gd" id="1_ghaa6"]
[ext_resource type="Texture2D" uid="uid://8a4su1ste6af" path="res://Assets/Enemy_Animations_Set/enemies-skeleton1_death.png" id="2_0830c"]
[ext_resource type="Texture2D" uid="uid://ddsoo7rjhw5jj" path="res://Assets/Enemy_Animations_Set/enemies-skeleton1_idle.png" id="2_afpow"]
[ext_resource type="Texture2D" uid="uid://6isc2ynchxoq" path="res://Assets/Enemy_Animations_Set/enemies-skeleton1_movement.png" id="4_ghaa6"]
[ext_resource type="Texture2D" uid="uid://v75tego4g3j8" path="res://Assets/Enemy_Animations_Set/enemies-skeleton1_take_damage.png" id="5_1dp5w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_287tu"]
atlas = ExtResource("1_1f0kj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0830c"]
atlas = ExtResource("1_1f0kj")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghaa6"]
atlas = ExtResource("1_1f0kj")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dp5w"]
atlas = ExtResource("1_1f0kj")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_auwsv"]
atlas = ExtResource("1_1f0kj")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8uf12"]
atlas = ExtResource("1_1f0kj")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_po0sg"]
atlas = ExtResource("1_1f0kj")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_haro7"]
atlas = ExtResource("1_1f0kj")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_56vhr"]
atlas = ExtResource("1_1f0kj")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhkrs"]
atlas = ExtResource("2_0830c")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xdhn"]
atlas = ExtResource("2_0830c")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jyny"]
atlas = ExtResource("2_0830c")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vh8xy"]
atlas = ExtResource("2_0830c")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjcj6"]
atlas = ExtResource("2_0830c")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ycey"]
atlas = ExtResource("2_0830c")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cim4"]
atlas = ExtResource("2_0830c")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7x82w"]
atlas = ExtResource("2_0830c")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iatxd"]
atlas = ExtResource("2_0830c")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqxsh"]
atlas = ExtResource("2_0830c")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0whn2"]
atlas = ExtResource("2_0830c")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bx1xr"]
atlas = ExtResource("2_0830c")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n85mp"]
atlas = ExtResource("2_0830c")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxecp"]
atlas = ExtResource("2_0830c")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jaer"]
atlas = ExtResource("2_0830c")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ve8xs"]
atlas = ExtResource("2_0830c")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0iv8"]
atlas = ExtResource("2_0830c")
region = Rect2(512, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ta2yt"]
atlas = ExtResource("2_afpow")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4x7e"]
atlas = ExtResource("2_afpow")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vt4ob"]
atlas = ExtResource("2_afpow")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgeoe"]
atlas = ExtResource("2_afpow")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tk7xo"]
atlas = ExtResource("2_afpow")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_scl1n"]
atlas = ExtResource("2_afpow")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1gwg"]
atlas = ExtResource("4_ghaa6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mxp7"]
atlas = ExtResource("4_ghaa6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5a56t"]
atlas = ExtResource("4_ghaa6")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6sir"]
atlas = ExtResource("4_ghaa6")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ej4m"]
atlas = ExtResource("4_ghaa6")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwheg"]
atlas = ExtResource("4_ghaa6")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iol0x"]
atlas = ExtResource("4_ghaa6")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofqcr"]
atlas = ExtResource("4_ghaa6")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nus6a"]
atlas = ExtResource("4_ghaa6")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_imgxb"]
atlas = ExtResource("4_ghaa6")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pyrvc"]
atlas = ExtResource("5_1dp5w")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pja2t"]
atlas = ExtResource("5_1dp5w")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jx5vc"]
atlas = ExtResource("5_1dp5w")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vco5"]
atlas = ExtResource("5_1dp5w")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xmqa"]
atlas = ExtResource("5_1dp5w")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_dhkrs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_287tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0830c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghaa6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dp5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_auwsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8uf12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_po0sg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_haro7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56vhr")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhkrs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xdhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jyny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vh8xy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjcj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ycey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cim4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7x82w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iatxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqxsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0whn2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bx1xr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n85mp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxecp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jaer")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ve8xs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0iv8")
}],
"loop": true,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ta2yt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4x7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vt4ob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgeoe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tk7xo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scl1n")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1gwg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mxp7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5a56t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6sir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ej4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwheg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iol0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofqcr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nus6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imgxb")
}],
"loop": true,
"name": &"run",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pyrvc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pja2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jx5vc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vco5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xmqa")
}],
"loop": true,
"name": &"take_damage",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5xdhn"]
radius = 6.0
height = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4jyny"]
size = Vector2(29, 25)

[sub_resource type="CircleShape2D" id="CircleShape2D_ghaa6"]
radius = 54.6371

[node name="Enemy" type="CharacterBody2D"]
scale = Vector2(1.3, 1.3)
script = ExtResource("1_ghaa6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_dhkrs")
animation = &"take_damage"
frame = 4
frame_progress = 0.0371231

[node name="EnemyCollider" type="CollisionShape2D" parent="."]
position = Vector2(-3, 6)
shape = SubResource("CapsuleShape2D_5xdhn")

[node name="EnemryAttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemryAttackArea"]
position = Vector2(-2.5, 5.5)
shape = SubResource("RectangleShape2D_4jyny")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(-3.07692, 6.15385)
shape = SubResource("CircleShape2D_ghaa6")

[node name="WanderTimer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_wander_timer_timeout"]
